# molnodes-utils

./: .gitignore  Readme.md  pixi.toml
molnodes/: 00_transform_test.py  01_consolidate.py  Readme.md  pyproject.toml
molnodes/molnodes/: _2_point_angle.py  _3_point_angle.py  __init__.py  _atoms_to_curves.py  _base_align.py  _bs_smooth.py  _cartoon_arrow_instance.py  _cartoon_arrow_primitive.py  _cartoon_arrows_scale.py  _curve_custom_profile.py  _curve_end_fix_color.py  _curve_ends_adjust_angle.py  _curve_ends_adjust_position.py  _curve_profile_backup.py  _curve_to_mesh.py  _debug_arrows.py  _dssp_sheet_checks.py  _expand_selection.py  _field_offset.py  _field_offset_bool.py  _field_offset_vec.py  _guide_rotation.py  _hbond_i___1__j___1__and_hbond_j___1__i___1_.py  _hbond_i___1_j__and_hbond_j_i___1_.py  _hbond_i__j__and_hbond_j__i_.py  _hbond_j___1_i_and_hbond_i_j___1_.py  _is_odd.py  _mn_animate_falloff_empty.py  _mn_animate_falloff_points.py  _mn_animate_field.py  _mn_animate_wiggle_mask_length.py  _mn_animate_wiggle_mask_res.py  _mn_assembly_instance_chains.py  _mn_assembly_rotate.py  _mn_cartoon_bs_alternate_axis.py  _mn_cartoon_smooth_handles.py  _mn_constants_atom_name_nucleic.py  _mn_constants_atom_name_peptide.py  _mn_point_curve_trails.py  _mn_select_attribute.py  (+178 more)
molnodes/nodes/: _atoms_to_curves.py  _curve_end_fix_color.py  _field_offset_bool.py  _mn_select_sec_struct.py  _mn_topo_assign_backbone.py  _mn_topo_calc_helix.py  (+35 more)
scripts/: 00_script.py  01_script.py
usernodes/: Readme.md  pyproject.toml
usernodes/usernodes/: __init__.py  wiggle.py
(+13 files in other folders)
