[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
dependencies = ["molnodes"]

name = "usernodes"
version = "0.1.0"
description = "A short description of your project"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = "==3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[tool.setuptools.packages.find]
where = [
    "usernodes",
] # list of folders that contain the packages (["."] by default)
